--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="/Harishram-portfolio/harishfav.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>harishram-portfolio</title>
   </head>
