Finalize portfolio before deployment

--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/Harishram-portfolio/harishfav.png" />
+
+    <!-- FAVICON -->
+    <link rel="icon" type="image/png" href="/harishfav.png" />
+    <link rel="shortcut icon" href="/harishfav.png" />
+    <link rel="apple-touch-icon" href="/harishfav.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>harishram-portfolio</title>
+    <title>Harishram Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
